GBG - Agrego cambios de revision a ti_ctg.py - Cambios en librerias que no funcionan en ambiente Anaconda usando requirements.txt - Se avisa que seccion 5.2 se va a tener que rehacer por problemas de libreria (RetrievalQA), que funciona en Colab pero no en locales

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,13 @@ unstructured  # Para manejar varios formatos (opcional, pero útil)
 
 # Otros
 python-dotenv  # Para variables de entorno
+
+# ti_ctg 
+pypdf 
+pymupdf
+sentencepiece
+sacremoses
+langchain-community
+langchain-text-splitters
+langchain-experimental
+langchain-core
